--- a/notebooks/r/05_Embeddings/01_QUANTILE_UMAP.Rmd
+++ b/notebooks/r/05_Embeddings/01_QUANTILE_UMAP.Rmd
@@ -102,11 +102,11 @@ pB = DimPlot(a549,
 pB
 ```
 
-## 3. Overlay metabolic fluxes onto the UMAP embedding
+## 3. Overlay growth rates from KO onto the UMAP embedding
 We'll read in the metabolic flux data computed from single-cell Flux Balance Analysis
 ```{r, results='hide'}
-flux_path = 'D:/Chandrasekaran/Projects/EMT/Analysis/old/recon1_flux_quantiles.csv'
-flux_data = readr::read_csv(flux_path)
+#flux_path = 'D:/Chandrasekaran/Projects/EMT/Analysis/old/recon1_flux_quantiles.csv'
+#flux_data = readr::read_csv(flux_path)
 
 flux_path = 'D:/Chandrasekaran/Projects/EMT/Analysis/old/recon1_rxnko_quantiles.csv'
 flux_data = readr::read_csv(flux_path)
@@ -122,6 +122,7 @@ Now let's perform some mapping to the original ids
 ```{r, results='hide'}
 a549_id_map = read_csv("D:/Chandrasekaran/Projects/EMT/Analysis/data/a549_colmap.csv")
 ```
+
 Now let's do a concatenation. It looks like there is perfect correspondance between the map and the dataset.
 ```{r}
 col_names = data.frame(col_names[4:length(col_names)])
@@ -164,128 +165,148 @@ colors = c("#CC3311", "#CC3311", "#CC3311",
            "#004488", "#004488", "#004488")
 ```
 
+```{r, results='hide'}
+reactions_to_visualize = c("AKGMALtm", "ENO", "ACITL",
+                           "CSNATr", "MDHm", "LDH_L")
+reaction_names = c("AKG Transporter", 
+                   "Enolase", 
+                   "ATP Citrate Lyase",
+                   "Carnitine o-acetyltransferase",
+                   "Malate dehydrogenase",
+                   "Lactate dehydrogenase")
+colors = c("#CC3311", "#CC3311", "#CC3311",
+           "#004488", "#004488", "#004488")
+```
+
+```{r, results='hide'}
+reactions_to_visualize = c("PGCD", "PSERT", "TPI",
+                           "PCm", "GAPD", "LDH_L")
+reaction_names = c("phosphoglycerate dehydrogenase", 
+                   "phosphoserine transaminase", 
+                   "triose phosphate isomerase",
+                   "pyruvate carboxylase",
+                   "glyceraldehyde-3-phosphate dehydrogenase",
+                   "Lactate dehydrogenase")
+colors = c("#CC3311", "#CC3311", "#CC3311",
+           "#004488", "#004488", "#004488")
+```
+
 ```{r}
 tmp = merged_umap[, reactions_to_visualize]
+#tmp[is.na(tmp)] = 0
 ```
 
 ```{r}
 p = list()
-p[[1]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=merged_umap[, reactions_to_visualize[1]])) + 
-                geom_point(size=3, alpha=0.5) +
+p[[1]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=tmp[, reactions_to_visualize[1]])) + 
+                geom_point(size=5) +
                 theme_minimal() +
                 labs(x="UMAP 1", 
                      y="UMAP 2",
                      title=reaction_names[1], 
                      color="Flux") + 
-                scale_color_gradient(low="gray", high=colors[1],
-                                     limits = c(0, 1.3)) +
-                theme(plot.title = element_text(size=10),
-                      legend.text=element_text(size=8),
-                      axis.title.x=element_text(size=10),
-                      axis.title.y=element_text(size=10),
-                      axis.text.x=element_text(size=8),
-                      axis.text.y=element_text(size=8),
-                      legend.box="vertical",
-                      legend.margin=margin())
+                scale_color_gradient(low="red", high='gray',
+                                     limit=c(0, 1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
+                
 
-p[[2]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=merged_umap[, reactions_to_visualize[2]])) + 
-                geom_point(size=3, alpha=0.5) +
+p[[2]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=tmp[, reactions_to_visualize[2]])) + 
+                geom_point(size=5) +
                 theme_minimal() +
                 labs(x="UMAP 1", 
                      y="UMAP 2",
                      title=reaction_names[2], 
                      color="Flux") + 
-                scale_color_gradient(low="gray", high=colors[2],
-                                     limits = c(0,1.3)) +
-                theme(plot.title = element_text(size=10),
-                      legend.text=element_text(size=8),
-                      axis.title.x=element_text(size=10),
-                      axis.title.y=element_text(size=10),
-                      axis.text.x=element_text(size=8),
-                      axis.text.y=element_text(size=8),
-                      legend.box="vertical",
-                      legend.margin=margin())
+                scale_color_gradient(low="red", high='gray',
+                                     limit=c(0, 1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans"))
 
-p[[3]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=merged_umap[, reactions_to_visualize[3]])) + 
-                geom_point(size=3, alpha=0.5) +
+p[[3]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=tmp[, reactions_to_visualize[3]])) + 
+                geom_point(size=5) +
                 theme_minimal() +
                 labs(x="UMAP 1", 
                      y="UMAP 2",
                      title=reaction_names[3], 
                      color="Flux") + 
-                scale_color_gradient(low="gray", high=colors[3],
-                                     limits = c(0,1.3)) +
-                theme(plot.title = element_text(size=10),
-                      legend.text=element_text(size=8),
-                      axis.title.x=element_text(size=10),
-                      axis.title.y=element_text(size=10),
-                      axis.text.x=element_text(size=8),
-                      axis.text.y=element_text(size=8),
-                      legend.box="vertical",
-                      legend.margin=margin())
+                scale_color_gradient(low="red", high='gray',
+                                     limit=c(0, 1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans"))
 
-p[[4]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=merged_umap[, reactions_to_visualize[4]])) + 
-                geom_point(size=3, alpha=0.5) +
+p[[4]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=tmp[, reactions_to_visualize[4]])) + 
+                geom_point(size=5) +
                 theme_minimal() +
                 labs(x="UMAP 1", 
                      y="UMAP 2",
                      title=reaction_names[4], 
                      color="Flux") + 
-                scale_color_gradient(low="gray", high=colors[4],
-                                     limits = c(0,1.3)) +
-                theme(plot.title = element_text(size=10),
-                      legend.text=element_text(size=8),
-                      axis.title.x=element_text(size=10),
-                      axis.title.y=element_text(size=10),
-                      axis.text.x=element_text(size=8),
-                      axis.text.y=element_text(size=8),
-                      legend.box="vertical",
-                      legend.margin=margin())
+                scale_color_gradient(low="red", high='gray',
+                                    limit=c(0, 1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
 
-p[[5]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=merged_umap[, reactions_to_visualize[5]])) + 
-                geom_point(size=3, alpha=0.5) +
+p[[5]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=tmp[, reactions_to_visualize[5]])) + 
+                geom_point(size=5) +
                 theme_minimal() +
                 labs(x="UMAP 1", 
                      y="UMAP 2",
                      title=reaction_names[5], 
                      color="Flux") + 
-                scale_color_gradient(low="gray", high=colors[5],
-                                     limits = c(0,1.3)) +
-                theme(plot.title = element_text(size=10),
-                      legend.text=element_text(size=8),
-                      axis.title.x=element_text(size=10),
-                      axis.title.y=element_text(size=10),
-                      axis.text.x=element_text(size=8),
-                      axis.text.y=element_text(size=8),
-                      legend.box="vertical",
-                      legend.margin=margin())
-
-p[[6]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=merged_umap[, reactions_to_visualize[6]])) + 
-                geom_point(size=3, alpha=0.5) +
-                theme_minimal() +
-                labs(x="UMAP 1", 
-                     y="UMAP 2",
-                     title=reaction_names[6], 
-                     color="Flux") + 
-                scale_color_gradient(low="gray", high=colors[6],
-                                     limits = c(0,1.3)) +
-                theme(plot.title = element_text(size=10),
-                      legend.text=element_text(size=8),
-                      axis.title.x=element_text(size=10),
-                      axis.title.y=element_text(size=10),
-                      axis.text.x=element_text(size=8),
-                      axis.text.y=element_text(size=8),
-                      legend.box="vertical",
-                      legend.margin=margin())
+                scale_color_gradient(low="red", high='gray',
+                                     limit=c(0, 1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
 
 ```
 
 
 Create and visualize the final UMAP flux plot object.
 ```{r, fig.width=24, fig.height=12, results='hide'}
-pC = scater::multiplot(p[[1]], p[[6]], p[[2]], 
+pC = scater::multiplot(pB, p[[1]], p[[2]], 
                        p[[4]], p[[3]], p[[5]], cols=3)
-pC
+#pC
 ```
 
 First, we need to format the data, so that it matches the DGE Matrix, where rows are reactions and columns are cell IDs.
