--- a/notebooks/r/05_Embeddings/01_QUANTILE_UMAP.Rmd
+++ b/notebooks/r/05_Embeddings/01_QUANTILE_UMAP.Rmd
@@ -161,8 +161,7 @@ reaction_names = c("adenylosuccinate lyase",
                    "ATP-Citrate lyase",
                    "cysteine oxidase",
                    "dihydrofolate reductase")
-colors = c("#CC3311", "#CC3311", "#CC3311",
-           "#004488", "#004488", "#004488")
+
 ```
 
 ```{r, results='hide'}
@@ -172,10 +171,7 @@ reaction_names = c("AKG Transporter",
                    "Enolase", 
                    "ATP Citrate Lyase",
                    "Carnitine o-acetyltransferase",
-                   "Malate dehydrogenase",
-                   "Lactate dehydrogenase")
-colors = c("#CC3311", "#CC3311", "#CC3311",
-           "#004488", "#004488", "#004488")
+                   "Malate dehydrogenase")
 ```
 
 ```{r, results='hide'}
@@ -187,13 +183,12 @@ reaction_names = c("phosphoglycerate dehydrogenase",
                    "pyruvate carboxylase",
                    "glyceraldehyde-3-phosphate dehydrogenase",
                    "Lactate dehydrogenase")
-colors = c("#CC3311", "#CC3311", "#CC3311",
-           "#004488", "#004488", "#004488")
+
 ```
 
 ```{r}
 tmp = merged_umap[, reactions_to_visualize]
-#tmp[is.na(tmp)] = 0
+tmp[is.na(tmp)] = 0
 ```
 
 ```{r}
@@ -309,6 +304,7 @@ pC = scater::multiplot(pB, p[[1]], p[[2]],
 #pC
 ```
 
+## 4. Save the data
 First, we need to format the data, so that it matches the DGE Matrix, where rows are reactions and columns are cell IDs.
 ```{r, results='hide'}
 fba = flux_data
@@ -353,8 +349,8 @@ Now let's perform the data preprocessing:
 #a549_subset = preprocess_flux(a549_subset, assay="FBA")
 ```
 
-## D. Get Metabolic Markers
-We'll get metabolic markers based on subpopulations.
+## 5. Get Metabolic Markers
+We'll get metabolic markers based on subpopulations. This module did not yield any result
 ```{r, results='hide'}
 a549_subset@active.ident = as.factor(a549_subset@meta.data$Time)
 subpop_reactions = FindAllMarkers(a549_subset,
@@ -381,4 +377,168 @@ DoHeatmap(object=a549_subset,
                 axis.text.x=element_text(size=16),
                 axis.text.y=element_text(size=16),
                 legend.title=element_text(size=20)))
+```
+
+## 6. Overlay metabolic fluxes
+```{r}
+flux_path = 'D:/Chandrasekaran/Projects/EMT/Analysis/old/recon1_flux_quantiles.csv'
+flux_data = readr::read_csv(flux_path)
+
+
+col_names = colnames(flux_data)'
+col_names = stringr::str_replace(col_names, '...[0-9]+', '')
+colnames(flux_data) = col_names
+#flux_data[, 4:ncol(flux_data)] = abs(flux_data[, 4:ncol(flux_data)])
+```
+
+Now let's perform some mapping to the original ids
+```{r, results='hide'}
+a549_id_map = read_csv("D:/Chandrasekaran/Projects/EMT/Analysis/data/a549_colmap.csv")
+```
+
+Now let's do a concatenation. It looks like there is perfect correspondance between the map and the dataset.
+```{r}
+col_names = data.frame(col_names[4:length(col_names)])
+sanity_check = merge(col_names, a549_id_map, by='row.names')
+```
+
+Now let's replace the names. This will be used to map to the embedding.
+```{r}
+colnames(flux_data) = c("BiGG", "Name", "Subsystem", sanity_check$orig_id)
+rxn_ids = flux_data[, c(1:3)]
+glycolysis_ids = rxn_ids[rxn_ids$Subsystem=='Glycolysis/Gluconeogenesis', 1]
+glycolysis_ids = na.omit(glycolysis_ids)
+glycolysis_data = flux_data[flux_data$Subsystem=='Glycolysis/Gluconeogenesis', ]
+glycolysis_data = glycolysis_data[, -c(2:3)]
+glycolysis_data = t(glycolysis_data)
+
+colnames(glycolysis_data) = glycolysis_data[1, ]
+glycolysis_data = data.frame(glycolysis_data)
+glycolysis_data = glycolysis_data[-1, ] 
+```
+
+```{r}
+glycolysis_data = glycolysis_data[ , apply(glycolysis_data, 2, function(x) !all(is.na(x)))]
+```
+
+```{r}
+umap_data = data.frame(a549@reductions$umap@cell.embeddings)
+glycolysis_data = mutate_all(glycolysis_data, function(x) as.numeric(as.character(x)))
+glycolysis_data = normalize(glycolysis_data)
+
+#umap_data$cluster = rownames(a549$Time)
+merged_umap = merge(umap_data, glycolysis_data, by.x='row.names', by.y='row.names')
+rownames(merged_umap) = merged_umap$Row.names
+merged_umap = merged_umap[, -1]
+```
+
+```{r}
+normalize <- function(x, na.rm = TRUE) {
+    return((x- min(x)) /(max(x)-min(x)))
+}
+```
+
+```{r}
+col = merged_umap[as.character(glycolysis_ids[5,])]
+p = list()
+p[[1]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=ENO)) + 
+                geom_point(size=5, alpha=0.75) +
+                theme_minimal() +
+                labs(x="UMAP 1", 
+                     y="UMAP 2",
+                     title="ENO", 
+                     color="Flux") + 
+                scale_colour_gradient2(high="#D00000", mid='#F48C06', low='gray', midpoint=0.5, limit=c(0,1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
+
+p[[2]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=HEX1)) + 
+                geom_point(size=5, alpha=0.75) +
+                theme_minimal() +
+                labs(x="UMAP 1", 
+                     y="UMAP 2",
+                     title="HK", 
+                     color="Flux") + 
+                scale_colour_gradient2(high="#D00000", mid='#F48C06', low='gray', midpoint=0.5, limit=c(0,1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
+
+p[[3]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=GAPD)) + 
+                geom_point(size=5, alpha=0.75) +
+                theme_minimal() +
+                labs(x="UMAP 1", 
+                     y="UMAP 2",
+                     title="GAPD", 
+                     color="Flux") + 
+                scale_colour_gradient2(high="#D00000", mid='#F48C06', low='gray', midpoint=0.5, limit=c(0,1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
+
+p[[4]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=FBA)) + 
+                geom_point(size=5, alpha=0.75) +
+                theme_minimal() +
+                labs(x="UMAP 1", 
+                     y="UMAP 2",
+                     title="FBA", 
+                     color="Flux") + 
+                scale_colour_gradient2(high="#D00000", mid='#F48C06', low='gray', midpoint=0.5, limit=c(0,1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
+
+p[[5]] = ggplot(merged_umap, aes(x=UMAP_1, y=UMAP_2, color=TPI)) + 
+                geom_point(size=5, alpha=0.75) +
+                theme_minimal() +
+                labs(x="UMAP 1", 
+                     y="UMAP 2",
+                     title="TPI", 
+                     color="Flux") + 
+                scale_colour_gradient2(high="#D00000", mid='#F48C06', low='gray', midpoint=0.5, limit=c(0,1)) +
+                theme(plot.title = element_text(size=26),
+                            legend.text=element_text(size=22),
+                            axis.title.x=element_text(size=22),
+                            axis.title.y=element_text(size=22),
+                            axis.text.x=element_text(size=22),
+                            axis.text.y=element_text(size=22),
+                            legend.position=c(0.05, 0.15),
+                            legend.box="vertical",
+                            legend.margin=margin(),
+                            text=element_text(family="sans")) 
+
+```
+
+```{r, fig.width=24, fig.height=12, results='hide'}
+pD = scater::multiplot(pB, p[[1]], p[[2]], 
+                       p[[4]], p[[3]], p[[5]], cols=3)
 ```
